bluejay-validator/tests/snapshots/executable_integration_test__error.snap
---
source: bluejay-validator/tests/executable_integration_test.rs
expression: formatted_errors
input_file: bluejay-validator/tests/test_data/executable/error/one_of_should_not_be_nullable_in_list.graphql
---
Error: Variable $oneOfArg is of type [String] but must be non-nullable to be used for OneOf Input Object OneOfListInput
   ╭─[ one_of_should_not_be_nullable_in_list.graphql:2:41 ]
   │
 2 │   oneOfList(oneOfListArg: { oneOfField: $oneOfArg })
   │                                         ────┬────  
   │                                             ╰────── Variable $oneOfArg is of type [String] but must be non-nullable to be used for OneOf Input Object OneOfListInput
───╯
